# WerkLauncher

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COPYING.md  README.md  WerkLauncher.desktop  build_appimage.sh  build_installer.bat  build_multimc.bat  build_release.bat  cleanup_mainwindow.py  final_cleanup.py  fix_mainwindow.py  installer.iss  refine_mainwindow.py  restore_mainwindow.py  test_po.cpp
.github/workflows/: build.yml
branding/: MultiMC.icns  MultiMC.manifest  WerkLauncher.icns  check_icons.py  logo.qrc  multimc.rc  process_icons.py  werklauncher.rc
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: UnitTest.cmake
cmake/UnitTest/: TestUtil.h  test.rc
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  BaseInstance.cpp  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  DesktopServices.cpp  DesktopServices.h  FileSystem.cpp  GZip.cpp  GZip_test.cpp  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstancePageProvider.h  JavaCommon.cpp  Json.cpp  LaunchController.cpp  LoggedProcess.cpp  Logger.cpp  Logger.h  QObjectPtr.h  UpdateController.cpp  Version.h  VersionProxyModel.cpp  main.cpp
launcher/discord/: DiscordRPC.cpp  DiscordRPC.h
launcher/icons/: IconList.cpp  IconList.h  IconUtils.cpp  MMCIcon.cpp  MMCIcon.h
launcher/java/: JavaChecker.cpp  JavaChecker.h  JavaCheckerJob.cpp  JavaInstallList.cpp  JavaUtils.cpp  JavaVersion.cpp
launcher/launch/: LaunchTask.cpp
launcher/meta/: BaseEntity.cpp  JsonFormat.h
launcher/minecraft/: AssetsUtils.cpp  ComponentUpdateTask.cpp  GradleSpecifier.h  GradleSpecifier_test.cpp  Library_test.cpp  MinecraftInstance.cpp  MojangVersionFormat_test.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  ProfileUtils.cpp  VersionFile.cpp  World.cpp  WorldList.cpp  WorldList.h
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AccountTask.cpp  AccountTask.h  AuthRequest.cpp  AuthRequest.h  AuthSession.h  AuthStep.h  MinecraftAccount.cpp  MinecraftAccount.h  Parsers.cpp
launcher/minecraft/gameoptions/: GameOptions.cpp
launcher/minecraft/launch/: ClaimAccount.cpp  ClaimAccount.h  DirectJavaLaunch.cpp  DownloadAuthlibInjector.cpp  DownloadAuthlibInjector.h  LauncherPartLaunch.cpp
launcher/minecraft/mod/: LocalModParseTask.cpp  LocalModParseTask.h  Mod.h  ModFolderModel.cpp  ModFolderModel.h  ModUpdateCheckTask.cpp  ModUpdateCheckTask.h  ModUpdateInstallTask.cpp  ModUpdateInstallTask.h
launcher/minecraft/update/: AssetUpdateTask.cpp
launcher/modplatform/atlauncher/: ATLPackInstallTask.cpp
launcher/modplatform/legacy_ftb/: PackFetchTask.cpp  PackInstallTask.cpp  PrivatePackManager.cpp
launcher/modplatform/modrinth/: ModrinthHashLookupRequest.cpp
launcher/net/: Download.cpp  Download.h  HttpMetaCache.cpp  NetAction.h  NetJob.cpp  NetJob.h  PasteUpload.cpp  PasteUpload.h
launcher/news/: NewsChecker.cpp
launcher/resources/builtin/: builtin.qrc
launcher/resources/multimc/: multimc.qrc
launcher/resources/skins/: skins.qrc
launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurUpload.cpp
launcher/settings/: INIFile.cpp
launcher/skins/: CapeCache.cpp  CapeCache.h  CapesModel.cpp  CapesModel.h  SkinRenderer.cpp  SkinRenderer.h  SkinTypes.cpp  SkinTypes.h  SkinUtils.cpp  SkinUtils.h  SkinWidget.cpp  SkinWidget.h  SkinsModel.cpp  SkinsModel.h  TextureMappings.cpp  TextureMappings.h
launcher/translations/: POTranslator.cpp  TranslationsModel.cpp  en_GB.po  mmc_en_GB.qm  mmc_uk.qm  uk.po
launcher/ui/: ColorCache.h  GlobalResizeFilter.h  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp  MainWindow.h  MainWindow_Accounts.cpp  MainWindow_Actions.cpp  MainWindow_Ui.cpp
launcher/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AccountsDialog.cpp  AccountsDialog.h  AccountsDialog.ui  CopyInstanceDialog.cpp  CreateShortcutDialog.cpp  CreateShortcutDialog.h  CustomMessageBox.cpp  CustomMessageBox.h  ExportInstanceDialog.cpp  GroupInputDialog.cpp  GroupInputDialog.h  IconPickerDialog.cpp  ModDownloaderDialog.cpp  ModDownloaderDialog.h  ModDownloaderDialog.ui  ModrinthExportDialog.cpp  ModrinthExportDialog.ui  NewComponentDialog.cpp  NewInstanceDialog.cpp  NotificationDialog.cpp  OfflineNameDialog.cpp  ProfileSelectDialog.cpp  ProgressDialog.cpp  StatisticsDialog.cpp  StatisticsDialog.h  UpdateDialog.cpp  UpdateDialog.ui  VersionSelectDialog.cpp
launcher/ui/instanceview/: InstanceDelegate.cpp  InstanceDelegate.h  InstanceProxyModel.cpp  InstanceProxyModel.h  InstanceView.cpp  InstanceView.h  VisualGroup.cpp
launcher/ui/pagedialog/: PageDialog.cpp  PageDialog.h
launcher/ui/setupwizard/: JavaWizardPage.cpp  LanguageWizardPage.cpp  LanguageWizardPage.h  SetupWizard.cpp  SetupWizard.h
launcher/ui/themes/: BrightTheme.cpp  BrightTheme.h  DarkTheme.cpp  DarkTheme.h  ITheme.cpp  ITheme.h
launcher/ui/widgets/: CustomTitleBar.cpp  CustomTitleBar.h  LabeledToolButton.cpp  LanguageSelectionWidget.cpp  LanguageSelectionWidget.h  LogView.cpp  PageContainer.cpp  SidePanel.cpp  SidePanel.h  ToastNotification.cpp  ToastNotification.h  VersionListView.cpp
launcher/updater/: DownloadTask.cpp  DownloadTask_test.cpp  GoUpdate.cpp  UpdateChecker.cpp
libraries/LocalPeer/: CMakeLists.txt
libraries/LocalPeer/src/: LocalPeer.cpp
libraries/classparser/: CMakeLists.txt
libraries/hoedown/: CMakeLists.txt
libraries/iconfix/: CMakeLists.txt  xdgicon.cpp
libraries/iconfix/internal/: qiconloader.cpp  qiconloader_p.h
libraries/javacheck/: CMakeLists.txt
libraries/katabasis/: CMakeLists.txt
libraries/katabasis/src/: DeviceFlow.cpp
libraries/launcher/: CMakeLists.txt
libraries/libnbtplusplus/: CMakeLists.txt
libraries/libnbtplusplus/include/: make_unique.h
libraries/libnbtplusplus/src/: tag_array.cpp
libraries/libnbtplusplus/test/: CMakeLists.txt
libraries/qrcode/: CMakeLists.txt
libraries/quazip/: CMakeLists.txt
libraries/rainbow/: CMakeLists.txt
libraries/systeminfo/: CMakeLists.txt
libraries/tomlc99/: CMakeLists.txt
libraries/xz-embedded/: CMakeLists.txt
(+111 files in other folders)
